更新 剑盾第一弹
新增：剑&盾 极巨争锋相关以图搜卡、卡查数据
剑&盾 极巨争锋相关训练家卡名称翻译

--- a/使用说明（必读）.md
+++ b/使用说明（必读）.md
@@ -20,6 +20,11 @@ TCGONE助手会简单的替换TCGONE、UNTAP网站的提示信息框中英文显
 用tcgone里的图，去检索简中类似的卡图，对于全图宝可梦，训练师卡更容易找到，非全图宝可梦，训练师卡以及HR彩虹闪卡会比较难识别出来。
 
 ## 更新日志：
+20230516
+新增：剑&盾 极巨争锋相关以图搜卡、卡查数据
+剑&盾 极巨争锋相关训练家卡名称翻译
+
+
 20230315
 新增：2.5炫奇争胜、三神礼盒、精灵球礼盒：闪耀宝可梦相关卡查功能（技能、特性翻译后续追加）
 以图搜卡2.0:以图搜卡，现在会更倾向于自动弹出可能性最大的卡片。另外因为更改了图片识别的方式，现在对彩虹闪之外的卡片识别率高于95%，非常牛逼
