更新极巨攻防

--- a/使用说明（必读）.md
+++ b/使用说明（必读）.md
@@ -20,6 +20,11 @@ TCGONE助手会简单的替换TCGONE、UNTAP网站的提示信息框中英文显
 用tcgone里的图，去检索简中类似的卡图，对于全图宝可梦，训练师卡更容易找到，非全图宝可梦，训练师卡以及HR彩虹闪卡会比较难识别出来。
 
 ## 更新日志：
+20230628
+新增：剑&盾 极巨攻防相关数据
+剑&盾 P卡相关数据
+剑&盾 极巨攻防相关翻译内容
+
 20230516
 新增：剑&盾 极巨争锋相关以图搜卡、卡查数据
 剑&盾 极巨争锋相关训练家卡名称翻译
